test/invalid/syntactic/nested_package_def.sysml
// INVALID: package definition cannot have 'def' keyword
// EXPECTED: Parse error
package def MyPackage { }
